refactor: refactor request and response body advice for encryption